[package]
name = "webaccountmanager_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Security_Authentication_Web_Core",
    "Foundation",
    "Foundation_Collections",
    "Security_Credentials",
    "Win32_System_WinRT",
]
